syntax="proto3";

option  java_multiple_files=true;
option java_package="io.nimbuspay";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayHelloAgain (HelloRequest) returns (HelloReply) {}
  rpc createMassage (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
  string lastName= 2;
  string address=3;
  int32 id = 4;
}

message HelloReply {
  string name = 1;
  string lastName= 2;
  string address=3;
  int32 id = 4;
}